--- a/index.html
+++ b/index.html
@@ -75,14 +75,45 @@ let estafetaspLayer = L.layerGroup().addTo(mymap);
 let rawGeoData = null;
 
 // --- CARGA DE DATOS ---
+// 1. Capa de Polígonos (Zonas)
 $.getJSON("estafetas.geojson", function(data) {
     rawGeoData = data;
-    L.geoJSON(data, { style: { color: "#2c3e50", weight: 2, fillOpacity: 0.1 } }).addTo(estafetasLayer);
+    L.geoJSON(data, { 
+        style: { color: "#2c3e50", weight: 2, fillOpacity: 0.1 } 
+    }).addTo(estafetasLayer);
 });
-$.getJSON("estafetasl.geojson", d => L.geoJSON(d, { style: { color: "#e74c3c", weight: 3 } }).addTo(estafetaslLayer));
-$.getJSON("estafetasp.geojson", d => L.geoJSON(d, { pointToLayer: (f, ll) => L.circleMarker(ll, {radius:6, color:"#27ae60", fillOpacity:1}) }).addTo(estafetaspLayer));
 
-L.control.layers(null, { "Polígonos": estafetasLayer, "Rutas": estafetaslLayer, "Estafetas": estafetaspLayer }, {collapsed:false, position: 'topright'}).addTo(mymap);
+// 2. Capa de Rutas (Líneas) - CORREGIDA
+$.getJSON("estafetasl.geojson", function(data) {
+    L.geoJSON(data, {
+        style: { color: "#e74c3c", weight: 3 },
+        onEachFeature: function (feature, layer) {
+            // Si el geojson tiene una propiedad nombre o id, la mostramos
+            let nombre = feature.properties.name || feature.properties.NOMBRE || "Ruta Postal";
+            layer.bindPopup(`<b>RUTA:</b> ${nombre}`);
+        }
+    }).addTo(estafetaslLayer);
+});
+
+// 3. Capa de Estafetas (Puntos) - CORREGIDA
+$.getJSON("estafetasp.geojson", function(data) {
+    L.geoJSON(data, {
+        pointToLayer: (feature, latlng) => L.circleMarker(latlng, {
+            radius: 8, 
+            color: "#27ae60", 
+            fillColor: "#2ecc71", 
+            fillOpacity: 1
+        }),
+        onEachFeature: function (feature, layer) {
+            let nombre = feature.properties.name || feature.properties.NOMBRE || "Estafeta";
+            layer.bindPopup(`
+                <div style="text-align:center;">
+                    <b>ESTAFETA:</b><br>${nombre}<br>
+                    <a href="#" class="btn-nav" onclick="abrirNavegacion(${layer.getLatLng().lat}, ${layer.getLatLng().lng})">📍 NAVEGAR AQUÍ</a>
+                </div>`);
+        }
+    }).addTo(estafetaspLayer);
+});
 
 // --- LÓGICA DE NAVEGACIÓN ---
 function abrirNavegacion(lat, lon) {
@@ -198,3 +229,4 @@ mymap.on('moveend zoomend', updateGrid);
 </script>
 </body>
 </html>
+
